[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/game/wheel_battle.gd" type="Script" id=1]
[ext_resource path="res://scenes/Wheel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tiles/0x72_DungeonTileset/frames/knight_m_idle_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://assets/ScreenSeparator.png" type="Texture" id=4]
[ext_resource path="res://assets/tiles/0x72_DungeonTileset/frames/big_demon_idle_anim_f0.png" type="Texture" id=5]
[ext_resource path="res://shaders/FadeMaterial.tres" type="Material" id=6]
[ext_resource path="res://assets/ScreenSeparatorOverlay.png" type="Texture" id=7]
[ext_resource path="res://scripts/ui/wheel_section.gd" type="Script" id=8]
[ext_resource path="res://assets/shield_icon.png" type="Texture" id=9]
[ext_resource path="res://assets/miss_icon.png" type="Texture" id=10]
[ext_resource path="res://assets/Wheel.png" type="Texture" id=11]
[ext_resource path="res://assets/sword_icon.png" type="Texture" id=12]
[ext_resource path="res://assets/lightning_icon.png" type="Texture" id=13]
[ext_resource path="res://assets/heart_icon.png" type="Texture" id=14]
[ext_resource path="res://scripts/data/wheel_section_data.gd" type="Script" id=15]
[ext_resource path="res://shaders/Wheel.gdshader" type="Shader" id=16]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float slider : hint_range(0, 1) = 1.0;
uniform sampler2D overlay;

void fragment() {
	if (UV.x > slider) {
		COLOR = vec4(0, 0, 0, 0);
	} else {
		vec4 tex_color = texture(TEXTURE, UV);
		vec4 overlay_color = texture(overlay, UV + (vec2(0, 1) * TIME));
		
		COLOR = overlay_color;
		COLOR.a = tex_color.a;
	}
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/slider = 1.0
shader_param/overlay = ExtResource( 7 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 16 )
shader_param/wheel_color = Color( 0.32549, 0.607843, 0.968627, 1 )
shader_param/border_color = Color( 1, 1, 1, 1 )
shader_param/visible_percent = 0.25

[sub_resource type="Resource" id=3]
resource_local_to_scene = true
script = ExtResource( 15 )
percent_of_wheel = 0.25
section_name = ""
attack_points = 0
defense_points = 0
special_points = 0
heal_points = 4
range_points = 0
miss = false

[sub_resource type="PackedScene" id=6]
resource_local_to_scene = true
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "WheelSection", "Sprite", "material", "texture", "script", "wheel_section_data", "sword_icon", "shield_icon", "lightning_icon", "heart_icon", "miss_icon", "Pivot", "Control", "anchor_left", "anchor_top", "anchor_right", "anchor_bottom", "margin_left", "margin_top", "margin_right", "margin_bottom", "rect_rotation", "SectionName", "Label", "anchor_left", "anchor_top", "anchor_right", "anchor_bottom", "margin_left", "margin_top", "margin_right", "margin_bottom", "align", "valign", "Icons", "VBoxContainer", "anchor_right", "margin_left", "margin_right", "margin_bottom", "rect_scale", "__meta__", "Heal2", "GridContainer", "margin_left", "margin_right", "margin_bottom", "size_flags_horizontal", "columns", "Heal_1", "TextureRect", "margin_right", "margin_bottom", "texture", "stretch_mode", "Heal_2", "TextureRect", "margin_left", "margin_right", "margin_bottom", "texture", "stretch_mode", "Heal_3", "TextureRect", "margin_top", "margin_right", "margin_bottom", "texture", "stretch_mode", "Heal_4", "TextureRect", "margin_left", "margin_top", "margin_right", "margin_bottom", "texture", "stretch_mode" ),
"node_count": 9,
"node_paths": [ NodePath("."), NodePath("./Pivot"), NodePath("./Pivot/SectionName"), NodePath("./Pivot/SectionName/Icons"), NodePath("./Pivot/SectionName/Icons/Heal2"), NodePath("./Pivot/SectionName/Icons/Heal2"), NodePath("./Pivot/SectionName/Icons/Heal2"), NodePath("./Pivot/SectionName/Icons/Heal2") ],
"nodes": PoolIntArray( -1, -1, 1, 0, -1, 9, 2, 0, 3, 1, 4, 2, 5, 3, 6, 4, 7, 5, 8, 6, 9, 7, 10, 8, 0, 1073741824, 0, 12, 11, -1, 9, 13, 9, 14, 10, 15, 11, 16, 12, 17, 13, 18, 14, 19, 15, 20, 16, 21, 17, 0, 1073741825, 0, 23, 22, -1, 10, 24, 18, 25, 19, 26, 20, 27, 21, 28, 22, 29, 23, 30, 24, 31, 25, 32, 26, 33, 27, 0, 1073741826, 0, 35, 34, -1, 6, 36, 28, 37, 29, 38, 30, 39, 31, 40, 32, 41, 33, 0, 1073741827, 0, 43, 42, -1, 5, 44, 34, 45, 35, 46, 36, 47, 37, 48, 38, 0, 1073741828, 0, 50, 49, -1, 4, 51, 39, 52, 40, 53, 41, 54, 42, 0, 1073741829, 0, 56, 55, -1, 5, 57, 43, 58, 44, 59, 45, 60, 46, 61, 47, 0, 1073741830, 0, 63, 62, -1, 5, 64, 48, 65, 49, 66, 50, 67, 51, 68, 52, 0, 1073741831, 0, 70, 69, -1, 6, 71, 53, 72, 54, 73, 55, 74, 56, 75, 57, 76, 58, 0 ),
"variants": [ SubResource( 2 ), ExtResource( 11 ), ExtResource( 8 ), SubResource( 3 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 10 ), 0.5, 0.5, 0.5, 0.5, -300.0, -300.0, -300.0, -300.0, 45.0, 0.5, 0.5, 0.5, 0.5, -192.0, -240.0, 192.0, -202.0, 1, 1, 1.0, -100.0, -84.0, 150.0, Vector2( 1.5, 1.5 ), {
"_edit_lock_": true
}, 166.0, 234.0, 68.0, 4, 2, 32.0, 32.0, ExtResource( 14 ), 6, 36.0, 68.0, 32.0, ExtResource( 14 ), 6, 36.0, 32.0, 68.0, ExtResource( 14 ), 6, 36.0, 36.0, 68.0, 68.0, ExtResource( 14 ), 6 ],
"version": 2
}

[sub_resource type="Resource" id=7]
resource_local_to_scene = true
script = ExtResource( 15 )
percent_of_wheel = 0.25
section_name = ""
attack_points = 0
defense_points = 1
special_points = 0
heal_points = 0
range_points = 0
miss = false

[sub_resource type="Resource" id=8]
resource_local_to_scene = true
script = ExtResource( 15 )
percent_of_wheel = 0.25
section_name = ""
attack_points = 0
defense_points = 2
special_points = 0
heal_points = 0
range_points = 0
miss = false

[sub_resource type="Resource" id=9]
resource_local_to_scene = true
script = ExtResource( 15 )
percent_of_wheel = 0.15
section_name = ""
attack_points = 0
defense_points = 3
special_points = 0
heal_points = 0
range_points = 0
miss = false

[sub_resource type="Resource" id=10]
script = ExtResource( 15 )
percent_of_wheel = 0.1
section_name = ""
attack_points = 0
defense_points = 0
special_points = 0
heal_points = 0
range_points = 0
miss = true

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float fade_amount : hint_range(0, 1) = 1.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	COLOR = vec4(color.r, color.g, color.b, color.a * fade_amount);
}"

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/fade_amount = 1.0

[node name="WheelBattle" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.101961 )

[node name="Tween" type="Tween" parent="Background"]

[node name="ScreenSeparator" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 512, 300 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="ScreenSeparator"]

[node name="Attacking" type="Node2D" parent="."]

[node name="AttackWheel" parent="Attacking" instance=ExtResource( 2 )]
position = Vector2( 128, 472 )
rotation = 0.785398
scale = Vector2( 0.75, 0.75 )
stopping_time = 0.25
startup_time = 0.6

[node name="AttackingUnit" type="Sprite" parent="Attacking"]
material = ExtResource( 6 )
position = Vector2( 440, 496 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Attacking"]

[node name="Defending" type="Node2D" parent="."]

[node name="DefenseWheel" parent="Defending" instance=ExtResource( 2 )]
position = Vector2( 876, 128 )
rotation = -2.35619
scale = Vector2( 0.75, 0.75 )
wheel_section = SubResource( 6 )
wheel_sections = [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ]
stopping_time = 0.25
startup_time = 0.6

[node name="DefendingUnit" type="Sprite" parent="Defending"]
material = SubResource( 11 )
position = Vector2( 576, 88 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )
flip_h = true

[node name="Tween" type="Tween" parent="Defending"]

[node name="DebugButtons" type="Node2D" parent="."]

[node name="Button" type="Button" parent="DebugButtons"]
margin_left = 72.0
margin_top = 8.0
margin_right = 122.0
margin_bottom = 28.0
text = "Start"

[node name="Button2" type="Button" parent="DebugButtons"]
margin_left = 128.0
margin_top = 8.0
margin_right = 178.0
margin_bottom = 28.0
text = "Reset"

[node name="Button3" type="Button" parent="DebugButtons"]
margin_left = 184.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 28.0
text = "fade out"

[node name="Button4" type="Button" parent="DebugButtons"]
margin_left = 32.0
margin_top = 208.0
margin_right = 118.0
margin_bottom = 228.0
text = "Start Wheel"

[node name="Button5" type="Button" parent="DebugButtons"]
margin_left = 136.0
margin_top = 208.0
margin_right = 221.0
margin_bottom = 228.0
text = "Stop Wheel"

[node name="Button6" type="Button" parent="DebugButtons"]
margin_left = 792.0
margin_top = 368.0
margin_right = 878.0
margin_bottom = 388.0
text = "Start Wheel"

[node name="Button7" type="Button" parent="DebugButtons"]
margin_left = 896.0
margin_top = 368.0
margin_right = 981.0
margin_bottom = 388.0
text = "Stop Wheel"

[connection signal="pressed" from="DebugButtons/Button" to="." method="animate_in"]
[connection signal="pressed" from="DebugButtons/Button2" to="." method="_reset_vars"]
[connection signal="pressed" from="DebugButtons/Button3" to="." method="fade_out"]
[connection signal="pressed" from="DebugButtons/Button4" to="." method="spin_attack_wheel"]
[connection signal="pressed" from="DebugButtons/Button5" to="." method="stop_attack_wheel"]
[connection signal="pressed" from="DebugButtons/Button6" to="." method="spin_defense_wheel"]
[connection signal="pressed" from="DebugButtons/Button7" to="." method="stop_defense_wheel"]
